[tool.poetry]
name = "overdrive"
version = "0.1.0"
description = "Data augmentation module for TF2.0"
authors = ["Adel Redjimi <adel.redjimi@quicksign.com>"]

[tool.poetry.dependencies]
python = "^3.5|^3.6"
tensorflow = "=2.0.0-alpha0"
tensorflow-addons = "^0.3.1"
numpy = "^1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
